--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1732,107 +1732,107 @@ stories:
   domain: http://www.saratogian.com/
   link: https://www.saratogian.com/ballston-spa-middle-school-s-mighty-thinkers/image_b73a409a-27ed-11ea-98ca-af9791b0c412.html
 images:
-- name: beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
-- name: la-muse-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-frosty-downtown-lights.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-- name: razorcliff-razorcliff-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-electricity.jpg
-- name: sand-hand-sand-hand-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-yellow-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-electricity.jpg
-- name: castle-wall-DSC-0067-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit-2.JPG
-- name: legal-statue-legalstatue-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-smooth-ride.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
-- name: supreme-court-supremecourt-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-cinnamon-rolls.jpg
-- name: window-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-diego-rivera1.jpg
-- name: crow_cinnamon_rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_cinnamon_rolls.jpg
-- name: trucksilo-trucksilo-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-smooth-ride.jpg
-- name: trucksilo-trucksilo-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-umberto-bocc.jpg
-- name: trucksilo-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crafty-painting.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
-- name: la-muse-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-la_36349151230_o.jpg
-- name: capital-battle-capitolbattle-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-nazi-poster.jpg
-- name: dc-statue-dcstatue-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-circuit.jpg
-- name: crow_matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_matrix.jpg
-- name: store-on-corner-store-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-paper.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-- name: amusement-park-amusement-park-2-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-internet-numbers.jpg
-- name: nazi-invasion-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
-- name: server-cloud-server-racks-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
-- name: death-valley-death-valley-national-park-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purp-paper.jpg
-- name: aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-- name: fence-mexico-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
-- name: copper-circuit-screaming-face-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-screaming-face-statue.jpg
-- name: oldtrain-oldtrain-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-constitution.jpg
-- name: berlinwall-DSC-0084-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-bright-sand.jpg
-- name: bf-skinner-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
-- name: old-door-lock-old-door-lock-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-pablo-blue.jpg
-- name: subway-subway-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-ww2-color.jpg
-- name: flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-clean-view.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-- name: school-clouds-church-clouds-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crabapple.jpg
-- name: beach-clouds-lifeguard-beachclouds-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-light-dali.jpg
-- name: dc-statue-dcstatue-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-soul.jpg
-- name: status-berlin-status-berlin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-- name: sand-hand-sand-hand-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-neo-instinct.jpg
-- name: old-door-lock-old-door-lock-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-diego-rivera1.jpg
-- name: oldcabin-store-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-rainbow-festival.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-- name: bluelake-dark-rain-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-38-67.jpg
-- name: bf-skinner-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-underground-subway_35929749683_o.jpg
-- name: christianity-christianity-under-construction-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-feed-people.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-copper-circuit-2.jpg
-- name: schoolhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/schoolhouse-dark-dali.jpg
-- name: oldhouse-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-diego-rivera1.jpg
+- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
+- name: border-crossing-bordercrossing-spagetti-accident.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-spagetti-accident.png
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: paris-paris-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
+- name: abe-lincoln-one-wols-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-07-91.jpg
+- name: braceros-domingo-ulloa-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-container-several-colors-grey.jpg
+- name: copper-circuit-cannon_36556797762_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cannon_36556797762_o.jpg
+- name: blossombar-crafty-painting-file-00-00-50-25.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
+- name: rain-princess-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_2971.jpg
+- name: berlinwall-DSC-0084-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colored-circuits.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sunday.JPG
+- name: bordercrossing-bordercrossing-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
+- name: stalin-time-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-going-to-dowtown-los-angeles.jpg
+- name: downtown-trucksilo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colorful-blocks.jpg
+- name: cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+- name: mistywoods-babyfoot-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-space-pizza.jpg
+- name: blossombar-post-modern-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-50-62.jpg
+- name: bf-skinner-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-high-speed-train-station-france.jpg
+- name: oldsmallboat-oldsmallboat-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-light-dali.jpg
+- name: dragon_close-up-wreck.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wreck.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+- name: border-crossing-bordercrossing-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-constitution.png
+- name: containership-containership-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-creativity.jpg
+- name: server-cloud-server-racks-clouds-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-neo-instinct.jpg
+- name: aws-s3-lighthouse-lighthouse-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still.jpg
+- name: oldbarn-oldbarn-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-mucha-mult.jpg
+- name: bf-skinner-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-sidewalk-washington.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: stalin-time-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-los-angeles-downtown-from-afar.jpg
+- name: white-house-lawn-white-house-window-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
+- name: nazi-invasion-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-building.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+- name: oldbarn-oldbarn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-storm.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-5.jpg
+- name: mediterranean-mediterranean-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-brush.jpg
+- name: carry-load-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-three.jpg
+- name: death-valley-death-valley-national-park-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
+- name: statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+- name: stalin-time-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-path-in-woods-green-lush.jpg
+- name: oldhouse-oldhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-mucha-mult.jpg
+- name: statue-of-liberty-front-view-statueofliberty-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crafty-painting.jpg
+- name: mediterranean-mediterranean-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-paper.jpg
+- name: containership-containership-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-dresden.jpg
+- name: oldhousecars-house-old-cars-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
+- name: flower-barbed-wire-flower-barbed-wire-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-collage.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
+- name: crow_colorful_dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
+- name: oldtrain-oldtrain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
+- name: gypsy-wagon-gypsywagon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-dali.jpg
+- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
 ---
 Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;Will Smith, Tom Holland In 'Spies In Disguise'.&nbsp;Keown Reaches For The Stars, Finds Love, New Life In Sweden.&nbsp;Annual Bowling Tournament Largest Contributor To Empty Stocking.&nbsp;Chamber Hosts Holiday Open House.&nbsp;Gilmer Man Charged With Trying To Meet Teen For Sex.&nbsp;Focus On Fun Helps Hornets Excel, Beach Take Top Coach Honors.&nbsp;'The Rise Of Skywalker' Falls Flat.&nbsp;
